--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <meta name="theme-color" content="#2196F3">
-    <title>Material UI One Page Theme</title>
+    <title>Gustavo Silva - Developer Expert</title>
 
     <!-- CSS  -->
     <link href="min/plugin-min.css" type="text/css" rel="stylesheet">
@@ -26,20 +26,20 @@
     <nav id="nav_f" class="default_color" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
-            <a href="#" id="logo-container" class="brand-logo">MD Template</a>
+            <a href="#" id="logo-container" class="brand-logo">Gustavo<b>Silva</b></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#intro">Service</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="https://github.com/joashp/material-design-template" target="_blank">Download</a></li>
+                    <li><a href="#intro">Sobre</a></li>
+                    <li><a href="#work">Trabalhos</a></li>
+                    <li><a href="#team">Tecnologias</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                    <li><a href="https://github.com/gustavobte" target="_blank">GitHub</a></li>
                 </ul>
                 <ul id="nav-mobile" class="side-nav">
-                    <li><a href="#intro">Service</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="https://github.com/joashp/material-design-template" target="_blank">Download</a></li>
+                    <li><a href="#intro">Sobre</a></li>
+                    <li><a href="#work">Trabalhos</a></li>
+                    <li><a href="#team">Tecnologias</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                    <li><a href="https://github.com/gustavobte" target="_blank">GitHub</a></li>
                 </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
@@ -54,8 +54,8 @@
             <span>Gustavo</span> 
             <span class="cd-words-wrapper waiting">
                 <b class="is-visible">Silva</b>
-                <b>, é um otimo profissional!!</b>
-                <b>, TOP!!</b>
+                <b>, Developer!!</b>
+                <b>, FrontEnd!!</b>
             </span>
         </h1>
     </div>
@@ -66,30 +66,14 @@
     <div class="container">
         <div class="row">
             <div  class="col s12">
-                <h2 class="center header text_h2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. <span class="span_h2"> Phasellus  </span>vestibulum lorem risus, nec suscipit lorem <span class="span_h2"> laoreet quis.</span> </h2>
+                <h2 class="center header text_h2"> 
+				Sobre mim! 
+				<span class="span_h2"> Phasellus  
+				</span>vestibulum lorem risus, nec suscipit lorem 
+				<span class="span_h2"> laoreet quis.</span> 
+				</h2>
             </div>
-
-            <div  class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-image-flash-on"></i>
-                    <h5 class="promo-caption">Speeds up development</h5>
-                    <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Cum sociis natoque penatibus et magnis dis parturient montes.</p>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-social-group"></i>
-                    <h5 class="promo-caption">User Experience Focused</h5>
-                    <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-hardware-desktop-windows"></i>
-                    <h5 class="promo-caption">Fully responsive</h5>
-                    <p class="light center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
-                </div>
-            </div>
+           
         </div>
     </div>
 </div>
@@ -97,7 +81,7 @@
 <!--Work-->
 <div class="section scrollspy" id="work">
     <div class="container">
-        <h2 class="header text_b">Work </h2>
+        <h2 class="header text_b">Trabalhos</h2>
         <div class="row">
             <div class="col s12 m4 l4">
                 <div class="card">
@@ -105,12 +89,12 @@
                         <img class="activator" src="img/project1.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#">Project link</a></p>
+                        <span class="card-title activator grey-text text-darken-4">Trabalho1 <i class="mdi-navigation-more-vert right"></i></span>
+                        <p><a href="#">Veja Aqui!</a></p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Project Title <i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <span class="card-title grey-text text-darken-4">Trabalho1 <i class="mdi-navigation-close right"></i></span>
+                        <p>Aqui varios Trabalhos.</p>
                     </div>
                 </div>
             </div>
@@ -201,7 +185,7 @@
 <!--Team-->
 <div class="section scrollspy" id="team">
     <div class="container">
-        <h2 class="header text_b"> Our Team </h2>
+        <h2 class="header text_b"> Tecnologias </h2>
         <div class="row">
             <div class="col s12 m3">
                 <div class="card card-avatar">
@@ -209,19 +193,19 @@
                         <img class="activator" src="img/avatar1.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Flash <br/>
-                            <small><em><a class="red-text text-darken-1" href="#">CEO</a></em></small></span>
+                        <span class="card-title activator grey-text text-darken-4">Angular <br/>
+                            <small><em><a class="red-text text-darken-1" href="#">++++</a></em></small></span>
                         <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
+                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/gustavobte">
                                 <i class="fa fa-facebook-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
+                            <a class="blue-text text-lighten-2" href="https://twitter.com/gustavobte">
                                 <i class="fa fa-twitter-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
+                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+gustavobte">
                                 <i class="fa fa-google-plus-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
+                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/gustavobte">
                                 <i class="fa fa-linkedin-square"></i>
                             </a>
                         </p>
@@ -238,16 +222,16 @@
                             <small><em><a class="red-text text-darken-1" href="#">Designer</a></em></small>
                         </span>
                         <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
+                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/gustavobte">
                                 <i class="fa fa-facebook-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
+                            <a class="blue-text text-lighten-2" href="https://twitter.com/gustavobte">
                                 <i class="fa fa-twitter-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
+                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+gustavobte">
                                 <i class="fa fa-google-plus-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
+                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/gustavobte">
                                 <i class="fa fa-linkedin-square"></i>
                             </a>
                         </p>
@@ -340,10 +324,10 @@
                 </form>
             </div>
             <div class="col l3 s12">
-                <h5 class="white-text">joashpereira.com</h5>
+                <h5 class="white-text">gustavobte.com</h5>
                 <ul>
-                    <li><a class="white-text" href="http://www.joashpereira.com/">Home</a></li>
-                    <li><a class="white-text" href="http://www.joashpereira.com/blog">Blog</a></li>
+                    <li><a class="white-text" href="http://gustavobte.com/">Home</a></li>
+                    <li><a class="white-text" href="http://gustavobte.com/blog">Blog</a></li>
                 </ul>
             </div>
             <div class="col l3 s12">
@@ -375,7 +359,7 @@
     </div>
     <div class="footer-copyright default_color">
         <div class="container">
-            Made by <a class="white-text" href="http://joashpereira.com">Joash Pereira</a>. Thanks to <a class="white-text" href="http://materializecss.com/">materializecss</a>
+            Made by <a class="white-text" href="http://joashpereira.com">Gustavo Silva</a>.  
         </div>
     </div>
 </footer>
