--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 <!--Navigation-->
  <div class="navbar-fixed">
     <nav id="nav_f" class="default_color" role="navigation">
+	
+	  <video muted autoplay loop poster="" id="bgvid">
+          <source src="img/vd.mp4" type="video/webm">
+        </video>
+	
+	
         <div class="container">
             <div class="nav-wrapper">
             <a href="#" id="logo-container" class="brand-logo">Gustavo<b>Silva</b></a>
