--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                     </div>
                 </div>
             </div>
+		
             <div class="col s12 m3">
                 <div class="card card-avatar">
                     <div class="waves-effect waves-block waves-light">
@@ -232,7 +233,8 @@
                 <h5 class="white-text">https://gustavobte.github.io/</h5>
                 <ul>
                     <li><a class="white-text" href="https://gustavobte.github.io/">Home</a></li>
-                    <li><a class="white-text" href="https://gustavobte.github.io/">Blog</a></li>
+                    <li><a class="white-text" href="http://sofia2.com/web/projetosofiamobile/ProjetoSofia/www/index.html#/app/home
+">Sofia2</a></li>
                 </ul>
             </div>
             <div class="col l3 s12">
